@@ -1,25 +1,35 @@
-FROM maven:3.6.0-jdk-12-alpine as build-stage
+FROM delabassee/fn-cache:latest as cache-stage
+
+FROM openjdk:13 as build-stage
 WORKDIR /function
+RUN curl https://www-eu.apache.org/dist/maven/maven-3/3.6.2/binaries/apache-maven-3.6.2-bin.tar.gz -o apache-maven-3.6.2-bin.tar.gz 
+RUN tar -zxvf apache-maven-3.6.2-bin.tar.gz
+
+ENV PATH="/function/apache-maven-3.6.2/bin:${PATH}"
+
 ENV MAVEN_OPTS -Dhttp.proxyHost= -Dhttp.proxyPort= -Dhttps.proxyHost= -Dhttps.proxyPort= -Dhttp.nonProxyHosts= -Dmaven.repo.local=/usr/share/maven/ref/repository
 ADD pom.xml /function/pom.xml
 ADD src /function/src
+RUN ["mvn", "package"]
+
 RUN ["mvn", "package", \
     "dependency:copy-dependencies", \
     "-DincludeScope=runtime", \
     "-Dmdep.prependGroupId=true", \
     "-DoutputDirectory=target" ]
 
-FROM openjdk:12-ea-19-jdk-oraclelinux7
+RUN /usr/java/openjdk-13/bin/jlink --no-header-files --no-man-pages --strip-java-debug-attributes --output /function/fnjre --add-modules $(/usr/java/openjdk-13/bin/jdeps --print-module-deps /function/target/function.jar)
+
+FROM oraclelinux:8-slim
 WORKDIR /function
 
-COPY --from=build-stage /function/target/*.jar /function/app/
-COPY src/main/c/libfnunixsocket.so /lib
+COPY --from=build-stage /function/target/*.jar /function/
+COPY --from=build-stage /function/fnjre/ /function/fnjre/
+COPY --from=cache-stage /libfnunixsocket.so /lib
 
-ENTRYPOINT [ "/usr/bin/java", \
-    "-XX:+UseSerialGC", \
-	 "--enable-preview", \
-    "-Xshare:on", \
-    "-cp", "/function/app/*", \
+ENTRYPOINT [ "/function/fnjre/bin/java", \
+    "--enable-preview", \
+    "-cp", "/function/*", \
     "com.fnproject.fn.runtime.EntryPoint" ]
 
 CMD ["com.example.fn.HelloFunction::handleRequest"]
